# 2024-P1-thanghoang7020202

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
