[tool.poetry]
name = "2024-p1-thanghoang7020202"
version = "0.1.0"
description = ""
authors = ["Thang <85994234+thanghoang7020202@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
